--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,10 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
+        //jcenter plugins
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.0'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
     }
 }
 
@@ -19,6 +23,12 @@ allprojects {
         jcenter()
         maven { url "https://jitpack.io" }
     }
+
+    // Avoid Kotlin docs error
+    tasks.withType(Javadoc) {
+        enabled = false
+    }
+
 }
 
 task clean(type: Delete) {
