--- a/imagepicker/build.gradle
+++ b/imagepicker/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.0.1'
     implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation "androidx.exifinterface:exifinterface:1.0.0"
 
     //More Info: https://github.com/Yalantis/uCrop
     implementation 'com.github.yalantis:ucrop:2.2.2'
