Optimized Compression Logic
Change Log:
- Optimized Compression Logic
- Replace white screen activity with transparent one.

--- a/imagepicker/src/main/AndroidManifest.xml
+++ b/imagepicker/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
     <application>
 
         <activity android:name=".ImagePickerActivity"
-            android:screenOrientation="portrait"/>
+                  android:theme="@style/Theme.Transparent.ImagePicker"
+                  android:screenOrientation="unspecified"/>
 
         <activity
             android:name="com.yalantis.ucrop.UCropActivity"
