--- a/imagepicker/build.gradle
+++ b/imagepicker/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     implementation 'com.github.yalantis:ucrop:2.2.2'
 
     //More Info: https://github.com/florent37/InlineActivityResult
-    implementation 'com.github.florent37:inline-activity-result-kotlin:1.0.0'
+    compileOnly 'com.github.florent37:inline-activity-result-kotlin:1.0.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
