--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -10,10 +10,10 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.github.dhaval2404.imagepicker.support.sample"
-        minSdkVersion 21
+        minSdkVersion 19
         targetSdkVersion 28
-        versionCode 2
-        versionName "1.1"
+        versionCode 4
+        versionName "1.3"
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
@@ -25,6 +25,10 @@ android {
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -35,6 +39,7 @@ dependencies {
     implementation "com.android.support:support-v4:28.0.0"
     implementation "com.android.support:design:28.0.0"
     implementation "com.android.support:cardview-v7:28.0.0"
+    implementation 'com.github.florent37:inline-activity-result-kotlin:1.0.1'
 
     //Image Loading Lib
     implementation 'com.github.bumptech.glide:glide:4.9.0'
