--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -48,5 +48,8 @@ dependencies {
     //Image Loading Lib
     implementation 'com.github.bumptech.glide:glide:4.9.0'
 
+    //Leakcanary
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0-beta-3'
+
     implementation project(':imagepicker')
 }
