--- a/imagepicker/src/main/AndroidManifest.xml
+++ b/imagepicker/src/main/AndroidManifest.xml
@@ -3,8 +3,9 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
-    <application android:requestLegacyExternalStorage="true">
+    <application>
 
         <activity android:name=".ImagePickerActivity"
                   android:theme="@style/Theme.Transparent.ImagePicker"
