--- a/imagepicker-support/src/main/AndroidManifest.xml
+++ b/imagepicker-support/src/main/AndroidManifest.xml
@@ -1,36 +1,30 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.github.dhaval2404.imagepicker">
+        package="com.github.dhaval2404.imagepicker">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <!--
-    If Not using Camera feature, Add following line in app manifest.
-    This will remove permission while manifest merge
-    <uses-permission android:name="android.permission.CAMERA" tools:node="remove"/>
-    -->
-    <uses-permission android:name="android.permission.CAMERA" />
-
     <application>
 
-        <activity android:name=".ImagePickerActivity"
-                  android:theme="@style/Theme.Transparent.ImagePicker"
-                  android:screenOrientation="unspecified"/>
+        <activity
+                android:name=".ImagePickerActivity"
+                android:screenOrientation="unspecified"
+                android:theme="@style/Theme.Transparent.ImagePicker" />
 
         <activity
-            android:name="com.yalantis.ucrop.UCropActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+                android:name="com.yalantis.ucrop.UCropActivity"
+                android:screenOrientation="portrait"
+                android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
 
         <provider
-            android:name="android.support.v4.content.FileProvider"
-            android:authorities="${applicationId}.provider"
-            android:exported="false"
-            android:grantUriPermissions="true">
+                android:name="android.support.v4.content.FileProvider"
+                android:authorities="${applicationId}.provider"
+                android:exported="false"
+                android:grantUriPermissions="true">
 
             <meta-data
-                android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/image_picker_provider_paths" />
+                    android:name="android.support.FILE_PROVIDER_PATHS"
+                    android:resource="@xml/image_picker_provider_paths" />
 
         </provider>
 
