Upgrade gradle dependency
Upgrade gradle dependency

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.browser:browser:1.2.0'
-    implementation 'com.google.android.material:material:1.1.0-beta02'
+    implementation 'com.google.android.material:material:1.1.0-rc01'
     implementation 'com.github.florent37:inline-activity-result-kotlin:1.0.1'
 
     testImplementation 'junit:junit:4.12'
