Upgrade gradle dependency
Upgrade gradle dependency

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -36,21 +36,21 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    implementation 'androidx.core:core-ktx:1.1.0'
+    implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.browser:browser:1.2.0'
-    implementation 'com.google.android.material:material:1.1.0-rc01'
-    implementation 'com.github.florent37:inline-activity-result-kotlin:1.0.1'
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.github.florent37:inline-activity-result-kotlin:1.0.3'
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test:core:1.2.0'
 
     //Image Loading Lib
-    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
 
     //Leakcanary
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0-beta-3'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0'
 
     implementation project(':imagepicker')
 
