--- a/imagepicker/src/main/AndroidManifest.xml
+++ b/imagepicker/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
 
         <provider
             android:name="com.github.dhaval2404.imagepicker.ImagePickerFileProvider"
-            android:authorities="@string/image_picker_provider_authority"
+            android:authorities="${applicationId}.imagepicker.provider"
             android:exported="false"
             android:grantUriPermissions="true">
 
