--- a/imagepicker-support/src/main/AndroidManifest.xml
+++ b/imagepicker-support/src/main/AndroidManifest.xml
@@ -17,8 +17,8 @@
                 android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
 
         <provider
-                android:name="android.support.v4.content.FileProvider"
-                android:authorities="${applicationId}.provider"
+                android:name="com.github.dhaval2404.imagepicker.ImagePickerFileProvider"
+                android:authorities="${applicationId}.imagepicker.provider"
                 android:exported="false"
                 android:grantUriPermissions="true">
 
