Added scoped storage support
Added scoped storage support and removed redundant storage permission.

#29 #75

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@
 /.idea/gradle.xml
 /.idea/runConfigurations.xml
 /.idea/codeStyles
+/.idea/dictionaries
+/.idea/icon.png
 .DS_Store
 /build
 /captures
