Added requestLegacyExternalStorage flag
Added requestLegacyExternalStorage flag to temporarily opt-out of scoped storage

--- a/imagepicker/src/main/AndroidManifest.xml
+++ b/imagepicker/src/main/AndroidManifest.xml
@@ -1,11 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.github.dhaval2404.imagepicker">
+    
+    <application android:requestLegacyExternalStorage="true">
 
-    <application>
-
-        <activity android:name=".ImagePickerActivity"
-                  android:theme="@style/Theme.Transparent.ImagePicker"
-                  android:screenOrientation="unspecified"/>
+        <activity
+            android:name=".ImagePickerActivity"
+            android:screenOrientation="unspecified"
+            android:theme="@style/Theme.Transparent.ImagePicker" />
 
         <activity
             android:name="com.yalantis.ucrop.UCropActivity"
