--- a/imagepicker/build.gradle
+++ b/imagepicker/build.gradle
@@ -63,23 +63,23 @@ ext {
     bintrayRepo = 'maven'
     bintrayName = 'imagepicker'
 
-    publishedGroupId = 'com.github.dhaval2404'
+    publishedGroupId = 'com.github.arykoz'
     libraryName = 'imagepicker'
     artifact = 'imagepicker'
 
     libraryDescription = 'Pick image from Gallery or Capture new image with Camera.'
 
-    siteUrl = 'https://github.com/Dhaval2404/ImagePicker/'
-    gitUrl = 'https://github.com/Dhaval2404/ImagePicker.git'
+    siteUrl = 'https://github.com/ARykoZ/ImagePicker'
+    gitUrl = 'https://github.com/ARykoZ/ImagePicker.git'
 
     libraryVersion = '1.7.5'
     //If you are uploading new library try : gradlew install
     //If you are updating existing library then execute: gradlew bintrayUpload
     //In both the case don't forgot to put bintray credentials in local.properties file.
 
-    developerId = 'dhaval2404'
-    developerName = 'Dhaval Patel'
-    developerEmail = 'dhavalpatel244@gmail.com'
+    developerId = 'arykoz'
+    developerName = 'Antonio Rico'
+    developerEmail = 'aryk0zdev@gmail.com'
 
     licenseName = 'The Apache Software License, Version 2.0'
     licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
