--- a/imagepicker/build.gradle
+++ b/imagepicker/build.gradle
@@ -6,6 +6,9 @@ apply plugin: 'kotlin-android-extensions'
 
 apply from: "../ktlint.gradle"
 
+apply plugin: 'com.github.dcendents.android-maven'
+apply plugin: 'com.jfrog.bintray'
+
 android {
     compileSdkVersion 28
 
@@ -84,8 +87,9 @@ ext {
     licenseName = 'The Apache Software License, Version 2.0'
     licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
     allLicenses = ["Apache-2.0"]
-}
 
-// Place it at the end of the file
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
+    //Bintray Credentials
+    bintrayUsername = System.getenv("arykoz") // Your Bintray username
+    bintrayApiKey = System.getenv("18e086e408cf548ed69ab9eabb79f1a0fcef979b") // API Key you copied in previous step
+    bintrayUserOrg = System.getenv("rykoextensions") // Organization you created in Bintray
+}
