--- a/imagepicker/build.gradle
+++ b/imagepicker/build.gradle
@@ -1,14 +1,12 @@
-apply plugin: 'com.android.library'
-
-apply plugin: 'kotlin-android'
-
-apply plugin: 'kotlin-android-extensions'
+plugins {
+    id 'com.android.library'
+    id 'kotlin-android'
+}
 
 apply from: "../ktlint.gradle"
 
 android {
     compileSdkVersion 29
-
 
     defaultConfig {
         minSdkVersion 19
@@ -44,9 +42,10 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    implementation 'androidx.core:core-ktx:1.2.0'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation "androidx.exifinterface:exifinterface:1.2.0"
+    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+
+    implementation "androidx.exifinterface:exifinterface:1.3.2"
     implementation 'androidx.documentfile:documentfile:1.0.1'
 
     //More Info: https://github.com/Yalantis/uCrop
@@ -55,9 +54,9 @@ dependencies {
     //More Info: https://github.com/florent37/InlineActivityResult
     compileOnly 'com.github.florent37:inline-activity-result-kotlin:1.0.4'
 
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test:core:1.2.0'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test:core:1.3.0'
 }
 
 ext {
