--- a/imagepicker/src/main/AndroidManifest.xml
+++ b/imagepicker/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.github.dhaval2404.imagepicker">
-    
-    <application android:requestLegacyExternalStorage="true">
+
+    <application>
 
         <activity
             android:name=".ImagePickerActivity"
