--- a/imagepicker/build.gradle
+++ b/imagepicker/build.gradle
@@ -44,6 +44,7 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
 
     implementation "androidx.exifinterface:exifinterface:1.3.2"
     implementation 'androidx.documentfile:documentfile:1.0.1'
