fix[sample]: Migrate to ViewBinding and use registerForActivityResult in sample

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id 'kotlin-android-extensions'
 }
 
 apply from: "../ktlint.gradle"
@@ -30,13 +29,17 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+    buildFeatures {
+        viewBinding true
+    }
     namespace 'com.github.dhaval2404.imagepicker.sample'
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-
     implementation project(':imagepicker')
 
     implementation 'androidx.core:core-ktx:1.10.0'
